[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerodb-dagster"
version = "0.1.0"
description = "Dagster I/O manager, sensor, and resource for ZeroDB. Store pipeline assets in ZeroDB with auto-provisioning."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "AINative Studio", email = "dev@ainative.studio"},
]
keywords = [
    "dagster",
    "dagster-io",
    "io-manager",
    "data-pipeline",
    "etl",
    "elt",
    "orchestration",
    "workflow",
    "zerodb",
    "ainative",
    "vector-database",
    "embeddings",
    "ai-database",
    "free-database",
    "mcp",
    "sensor",
    "asset-materialization",
    "data-engineering",
    "mlops",
    "ml-pipeline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dagster>=1.5.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/AINative-Studio/zerodb-dagster"
Documentation = "https://docs.ainative.studio"
Repository = "https://github.com/AINative-Studio/zerodb-dagster"
Issues = "https://github.com/AINative-Studio/zerodb-dagster/issues"

[tool.setuptools.packages.find]
include = ["zerodb_dagster*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
